fix footer alignment

--- a/theme/sass/_flash_alerts.scss
+++ b/theme/sass/_flash_alerts.scss
@@ -1,4 +1,5 @@
 .flash {
+  @extend .drop_shadow;
   position: absolute;
   white-space: nowrap;
   top: 0px;
